# magma-sidecar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: README.md  build-and-publish.yml  ci.yml
debian/sidecar/: build-deb.sh  control  magma-sidecar.service  magma-sidecar.sysusers  monad-ipc-setup  postinst  postrm  prerm
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  RELEASE_VERIFICATION.md  RELEASING.md  VALIDATOR_INSTALL.md
scripts/: link-txpool-socket.sh  publish-apt.sh
src/: backrun.rs  config.rs  error.rs  forward.rs  main.rs  metrics.rs  policy.rs  routes.rs  txpool_ipc.rs
